resources/app-sre-stage/uhc-stage-sso-test/clusters-mgmt.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 5m
    # Changing from default 5s to check if https://issues.redhat.com/browse/SDB-1327 is haproxy health checks.
    router.openshift.io/haproxy.health.check.interval: 6s
  name: clusters-mgmt
spec:
  host: api.apps.ssotest01ue1.a7a5.p1.openshiftapps.com
  path: "/api/clusters_mgmt"
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: clusters-service
    weight: 100
