resources/app-sre-stage/uhc-stage-sso-test/gateway-server.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 5m
  name: gateway-server
spec:
  host: api.apps.ssotest01ue1.a7a5.p1.openshiftapps.com
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: gateway-server
    weight: 100
